Add the license to the actual program

--- a/src/libvsemu/version.c.in
+++ b/src/libvsemu/version.c.in
@@ -15,6 +15,29 @@
 //#define DISABLE_LOGGING @RV32ESIM_DISABLE_LOGGING@
 //#define UNSAFE_MODE @RV32ESIM_UNSAFE@
 //#define EXTENSION_C @RV32ESIM_C@
+#define LICENSE_STRING "\
+MIT License\n\
+\n\
+Copyright (c) 2022 John Jekel\n\
+\n\
+Permission is hereby granted, free of charge, to any person obtaining a copy\n\
+of this software and associated documentation files (the \"Software\"), to deal\n\
+in the Software without restriction, including without limitation the rights\n\
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell\n\
+copies of the Software, and to permit persons to whom the Software is\n\
+furnished to do so, subject to the following conditions:\n\
+\n\
+The above copyright notice and this permission notice shall be included in all\n\
+copies or substantial portions of the Software.\n\
+\n\
+THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR\n\
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,\n\
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE\n\
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER\n\
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,\n\
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE\n\
+SOFTWARE.\n\
+"
 
 /* Includes */
 
@@ -44,6 +67,10 @@ uint_fast16_t vsemu_version_minor(void) {
 
 const char* vsemu_version_string(void) {
     return VERSION_STRING;
+}
+
+const char* vsemu_license_string(void) {
+    return LICENSE_STRING;
 }
 
 /* Static Function Implementations */
